<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.areeni.slidefortrix.TeamNamesActivity">

    <Button
        android:id="@+id/partnersGoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/letsgo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/myTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/team1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/otherTeam"
        app:layout_constraintEnd_toEndOf="@+id/otherTeam"
        app:layout_constraintStart_toStartOf="@+id/otherTeam" />

    <EditText
        android:id="@+id/otherTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/team2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/partnersGoButton"
        app:layout_constraintEnd_toEndOf="@+id/partnersGoButton"
        app:layout_constraintStart_toStartOf="@+id/partnersGoButton" />

</android.support.constraint.ConstraintLayout>
